ui fixed after Initial Chunk Files were too big

--- a/src/app/home/home-page/home-page.component.scss
+++ b/src/app/home/home-page/home-page.component.scss
@@ -10,14 +10,88 @@
 .row {
   &--one {
     margin-top: $margin-top-80;
+    @include respond-above(sm) {
+      margin-top: $margin-top-143;
+      display: flex;
+    }
   }
   &--two {
     p {
       opacity: 0.8;
-      margin-bottom: $margin-bottom-20;
+      margin-bottom: $margin-bottom-40;
+      @include respond-above(sm) {
+        margin-bottom: $margin-bottom-60;
+      }
     }
   }
 }
+// TODO: refactoring
+.flex-container {
+  @include respond-above(sm) {
+    display: -ms-inline-flexbox;
+    display: -webkit-inline-flex;
+    display: inline-flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+.flex-item:nth-child(1) {
+  @include respond-above(sm) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+  }
+}
+
+.flex-item:nth-child(2) {
+  @include respond-above(sm) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+  }
+}
+
+.flex-item:nth-child(3) {
+  @include respond-above(sm) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 100%;
+    -ms-flex: 1 1 100%;
+    flex: 1 1 100%;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    width: 100%;
+  }
+}
+
 .column {
   &--left {
     max-width: 422px;
@@ -31,9 +105,36 @@
     display: none;
     @include respond-above(sm) {
       display: block;
+      // position: relative;
+      // z-index: 2;
+      // &::before {
+      //   display: block;
+      //   position: absolute;
+      //   width: 555px;
+      //   height: 650px;
+      //   content: '';
+      //   top: -100px;
+      //   left: -300px;
+      //   z-index: 1;
+      //   @include box-img-bg;
+      // }
     }
+    // img {
+    //   position: relative;
+    //   z-index: 3;
+    // }
   }
+
   &--editable-text {
+    .edit {
+      &--p {
+        max-width: 325px;
+        display: inline-block;
+        @include respond-above(sm) {
+          max-width: 342px;
+        }
+      }
+    }
     .quotes-icon {
       position: relative;
       z-index: 2;
