--- a/src/styles/base/_spacings.scss
+++ b/src/styles/base/_spacings.scss
@@ -1,17 +1,3 @@
-$margin-top-100: 100px;
-$margin-top-80: 80px;
-$margin-top-60: 60px;
-$margin-top-40: 40px;
-$margin-top-20: 20px;
-
-$margin-bottom-20: 20px;
-$margin-bottom-50: 50px;
-$margin-bottom-60: 60px;
-
-$padding-bottom-26: 26px;
-$padding-lr-20: 20px;
-$padding-all-20: 20px;
-
 .margin-t-20 {
   margin-top: $margin-top-20;
 }
@@ -39,6 +25,10 @@ $padding-all-20: 20px;
 .margin-b-50 {
   margin-bottom: $margin-bottom-50;
 }
+.margin-tlr-row {
+  margin: $margin-tlr-row;
+}
+
 .padding-all-20 {
   padding: $padding-all-20;
   &--mobile {
